# Alien_attack_demo

./: README.md
Alien_attack/: .gitignore  CMakeLists.txt
Alien_attack/base64/: CMakeLists.txt
Alien_attack/content/maps/: alien_attack_level_1.tmx  alien_attack_level_2.tmx  blocks1.tsx  blocks2.tsx
Alien_attack/content/xml/: states.xml  stories.xml
Alien_attack/lib/logger/: CMakeLists.txt
Alien_attack/lib/logger/source/: logger.hpp
Alien_attack/lib/tinyxml/: CMakeLists.txt
Alien_attack/lib/zlib/share/pkgconfig/: zlib.pc
Alien_attack/logger/source/: logger.cpp
Alien_attack/source/: engine_error_code.cpp  engine_error_code.hpp  event_filter.cpp  event_filter.hpp  game.cpp  game.hpp  loader_params.cpp  loader_params.hpp  main.cpp  texture_error_code.cpp  texture_error_code.hpp  texture_manager.cpp  texture_manager.hpp
Alien_attack/source/collision/: collision.cpp  collision.hpp  collision_manager.cpp  collision_manager.hpp
Alien_attack/source/common/: common.hpp  game_constants.hpp
Alien_attack/source/controllers/: controller_error_code.cpp  controller_error_code.hpp  input_handler.cpp  input_handler.hpp
Alien_attack/source/filemanager/: filemanager.cpp  filemanager.hpp
Alien_attack/source/game_objects/: game_object.cpp  game_object.hpp  game_object_factory.cpp  game_object_factory.hpp  scrolling_background.cpp  scrolling_background.hpp
Alien_attack/source/game_objects/actor/: actor_object.cpp  actor_object.hpp  bullet.cpp  bullet.hpp  bullet_handler.cpp  bullet_handler.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp  shooter_object.cpp  shooter_object.hpp
Alien_attack/source/game_objects/actor/alien_attack/: eskeletor.cpp  eskeletor.hpp  glider.cpp  glider.hpp  level_1_boss.cpp  level_1_boss.hpp  roof_turret.cpp  roof_turret.hpp  shot_glider.cpp  shot_glider.hpp  turret.cpp  turret.hpp
Alien_attack/source/game_objects/interface/: animated_graphic.cpp  animated_graphic.hpp  button.cpp  button.hpp  interface_object.cpp  interface_object.hpp  text.cpp  text.hpp
Alien_attack/source/game_states/: between_level_state.cpp  between_level_state.hpp  game_over_state.cpp  game_over_state.hpp  game_state.cpp  game_state.hpp  game_state_error_code.cpp  game_state_error_code.hpp  game_state_machine.cpp  game_state_machine.hpp  game_winning_state.cpp  game_winning_state.hpp  main_menu_state.cpp  main_menu_state.hpp  menu_state.cpp  menu_state.hpp  pause_state.cpp  pause_state.hpp  play_state.cpp  play_state.hpp
Alien_attack/source/level/: layer.hpp  level.cpp  level.hpp  object_layer.cpp  object_layer.hpp  tile_layer.cpp  tile_layer.hpp  tileset.hpp
Alien_attack/source/math/: common.hpp  vector_2d.cpp  vector_2d.hpp
Alien_attack/source/parser/: common.cpp  common.hpp  level_parser.cpp  level_parser.hpp  parser_error_code.cpp  parser_error_code.hpp  state_parser.cpp  state_parser.hpp  story_parser.cpp  story_parser.hpp
Alien_attack/source/sound/: sound_manager.cpp  sound_manager.hpp
