cmake_minimum_required(VERSION 3.5)

project(base64 VERSION 1.0.0 LANGUAGES CXX DESCRIPTION "Decoder from base64 encoding")

set(CMAKE_BUILD_TYPE			Debug)
set(CMAKE_INCLUDE_CURRENT_DIR	ON)
set(CMAKE_CXX_FLAGS				"${CMAKE_CXX_FLAGS}")

set(CMAKE_SOURCE_DIR			${CMAKE_CURRENT_SOURCE_DIR}/source)

set(CMAKE_CXX_STANDARD				14)
set(CMAKE_CXX_STANDARD_REQUIRED		ON)
set(BUILD_SHARED_LIBS				OFF)
#set(CMAKE_GNUtoMS		ON)

add_library(${PROJECT_NAME})

file(GLOB_RECURSE MAIN_SOURCE	${CMAKE_SOURCE_DIR}/*.cpp)

target_sources(${PROJECT_NAME}
	PRIVATE ${MAIN_SOURCE})

target_include_directories(${PROJECT_NAME}
	PUBLIC	${CMAKE_SOURCE_DIR})


set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)

set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${CMAKE_SOURCE_DIR}/base64.h)


set(INCLUDE_DIR		"${CMAKE_CURRENT_SOURCE_DIR}/include")
install(
	TARGETS ${PROJECT_NAME}
	PUBLIC_HEADER DESTINATION ${INCLUDE_DIR}
	LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lib
	ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lib
	RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
